# Abyss

./: .gitignore  CMakeLists.txt  README.md
builds/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
builds/debug/.cmake/api/v1/reply/: cache-v2-7c874d1cdecd0e0d153d.json  cmakeFiles-v1-3912f53d844de77f6bea.json  codemodel-v2-518c16044a0de6d31d18.json  directory-.-Debug-88a6c856abf257b2713c.json  directory-libraries.glfw-3.3.7-Debug-c8b8badb1c9813c5122c.json  index-2023-08-31T09-47-22-0046.json  target-Abyss-Debug-b6ba23861a3259f1c97b.json  target-glfw-Debug-cb17a3b406b768c55202.json  target-uninstall-Debug-05cc50b06829350061bb.json  target-update_mappings-Debug-1399470898a4f6164106.json
builds/debug/libraries/glfw-3.3.7/: cmake_install.cmake  cmake_uninstall.cmake
builds/debug/libraries/glfw-3.3.7/src/: cmake_install.cmake
builds/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
builds/release/.cmake/api/v1/reply/: cache-v2-fb3438984709a8a6f2f5.json  cmakeFiles-v1-c884016bf8cf4c1e834d.json  codemodel-v2-a189bcd4f984202cf791.json  directory-.-Release-6ae9b99cee4b363d8cfb.json  directory-libraries.glfw-3.3.7-Release-47191081606b71945b28.json  directory-libraries.glfw-3.3.7.src-Release-3f0b446fd6a26e9ce4bb.json  index-2023-08-31T09-42-22-0012.json  target-Abyss-Release-7fd83463f5ac13222218.json  target-glfw-Release-ec0687e084056cc5aa03.json  target-uninstall-Release-c90b7731cd9606e0da78.json  target-update_mappings-Release-4fcbbe7daa2834ea2e79.json
builds/release/libraries/glfw-3.3.7/: cmake_install.cmake  cmake_uninstall.cmake
builds/release/libraries/glfw-3.3.7/src/: cmake_install.cmake
source/: Game.h  Main.cpp
source/networking/: Address.h  BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  Buffer.cpp  Buffer.h  NetworkingUtilities.h  Opcodes.h  Packet.cpp  Packet.h  Socket.h  SocketAddress.cpp  SocketAddress.h  UDPSocket.h
source/platform/linux/: LinuxNetworkingUtilities.cpp  LinuxSocket.cpp  Window.h
source/platform/macos/: MacOSNetworkingUtilities.cpp  MacOSSocket.cpp  MacOSUDPSocket.cpp  MacOSWindow.cpp  Window.h
source/platform/windows/: Window.h  WindowsNetworkingUtilities.cpp
source/rendering/directx/: Texture.h
source/rendering/metal/: Texture.h
source/rendering/opengl/: Texture.h
source/utility/: Logger.cpp  Logger.h  Utility.h
testing/: Receiver.cpp  Receiver.h  Sender.cpp  Sender.h
